# wheelchair-layout-solver

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FILE_MANIFEST.txt  LICENSE  README.md  SECURITY.md  START_HERE.txt  VALIDATION.txt  pyproject.toml  wheelchair-layout-solver.code-workspace
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
config/: element_classes.json
docs/: architecture.md  cad_convention.md
grasshopper/: README.md
rhino/scripts/: create_accessibility_layers.py
samples/: bathroom_01.json
scripts/: install_hops_windows.ps1  setup_unix.sh  setup_windows.ps1
src/wheelchair_layout_solver/: __init__.py  api.py  candidates.py  cli.py  collision.py  geometry.py  hops_server.py  io.py  layout_scoring.py  layout_validation.py  models.py  path.py
src/wheelchair_layout_solver/cad/: dxf_importer.py  preview.py  semantic_importer.py  semantic_preview.py
tests/: test_candidates.py  test_collision.py  test_dxf_importer.py  test_dxf_preview.py  test_dxf_semantic_importer.py  test_element_models.py  test_layout_scoring.py  test_layout_validation.py  test_path.py  test_semantic_preview.py
