[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "wheelchair-layout-solver"
version = "0.1.0"
description = "Deterministic 2D wheelchair clearance, path validation, and layout optimization toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Michele Scattolin" }
]
keywords = [
  "accessibility",
  "wheelchair",
  "grasshopper",
  "rhinoceros",
  "path-planning",
  "geometry"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pydantic>=2.7,<3",
  "shapely>=2.0,<3",
]

[project.optional-dependencies]
cad = [
  "ezdxf>=1.3,<2",
  "rhino3dm>=8,<9",
]
api = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]
hops = [
  "Flask>=2.3,<4",
  "ghhops-server==1.5.5",
]
dev = [
  "build>=1.2,<2",
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
wheelchair-solver = "wheelchair_layout_solver.cli:main"

[project.urls]
Repository = "https://github.com/sc4tto/wheelchair-layout-solver"
Issues = "https://github.com/sc4tto/wheelchair-layout-solver/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wheelchair_layout_solver"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["wheelchair_layout_solver"]
